# ElOscuro

./: TODO.txt  configure.ac
src/: Makefile.am  _engine.h  _rt_acto.h  _rt_menu.h  _rt_play.h  _rt_soun.h  _rt_spba.h  _rt_util.h  byteorder.c  byteorder.h  byteordr.h  cin_actr.c  cin_actr.h  cin_def.h  cin_efct.c  cin_efct.h  cin_evnt.c  cin_evnt.h  cin_glob.c  cin_glob.h  cin_main.c  cin_main.h  cin_util.c  cin_util.h  crc.c  crc.h  develop.h  dosutil.c  dukemusc.c  engine.c  engine.h  f_scale.h  hashtable.c  hashtable.h  isr.c  isr.h  modexlib.c  modexlib.h  music.h  myprint.h  (+71 more)
src/audiolib/: Makefile.am  ctaweapi.h  dsl.c  fx_man.c  multivoc.c  platform.h  standard.h
